# TrayWeather

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AlertDialog.cpp  AlertDialog.h  AlertDialog.ui  AlertsWidget.cpp  AlertsWidget.h  AlertsWidget.ui  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  ErrorWidget.ui  ISO 3166-1-alpha-2.h  LocationConfigDialog.cpp  LocationConfigDialog.h  LocationConfigDialog.ui  LocationFinderDialog.cpp  LocationFinderDialog.h  LocationFinderDialog.ui  Main.cpp  PollutionWidget.cpp  PollutionWidget.h  PollutionWidget.ui  Provider.cpp  Provider.h  TooltipWidget.cpp  TooltipWidget.h  TooltipWidget.ui  TrayWeather.cpp  TrayWeather.h  UVWidget.cpp  UVWidget.h  UVWidget.ui  Updater.cpp  Updater.h  Updater.ui  Utils.cpp  Utils.h  (+10 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml
Providers/: OWM25.cpp  OWM25.h  OWM30.cpp  OWM30.h  OpenMeteo.cpp  OpenMeteo.h  WeatherAPI.cpp  WeatherAPI.h
dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  LocationFinderDialog.cpp  LocationFinderDialog.ui  WeatherDialog.cpp  WeatherDialog.h  WeatherDialog.ui
installer/: script.iss.in
languages/: de_DE.ts  empty.ts  es_ES.ts  fr_FR.ts  hu_HU.ts  it_IT.ts  ko_KR.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  si_SI.ts  sl_SI.ts  tr_TR.ts  translations.qrc  uk_UA.ts  zh_CN.ts
rsc/: resources.qrc  webpage.html  webpage25.html  webpage30.html
rsc/darktheme/: style.qss
rsc/iconThemes/climacons/: README.md
widgets/: AlertsWidget.cpp  AlertsWidget.ui  CurrentWeatherWidget.cpp  CurrentWeatherWidget.h  CurrentWeatherWidget.ui  ErrorWidget.ui  PollutionWidget.cpp  PollutionWidget.h  UVWidget.cpp  WeatherWidget.cpp
